Ensuring immutability of data returned for lookups
Fixes https://github.com/tomaytotomato/location4j/issues/1